correct text-align

--- a/style.css
+++ b/style.css
@@ -47,6 +47,12 @@ footer {
     margin-top: 2em;
 }
 
+@media only screen and (max-width: 575px) {
+    #desc {
+      text-align: center !important;
+    }
+  }
+
 .desc-cyrus, .desc-torero {
     width: 100%;
 }
